--- a/EMTECH/src/main/resources/templates/listaCandidatos.html
+++ b/EMTECH/src/main/resources/templates/listaCandidatos.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"></header> 
-        <article th:replace="layout/PlantillaCandidatos :: formularioCandidatos"></article>
+        <article th:replace="layout/PlantillaCandidatos :: listaCandidatos"></article>
         <section th:replace="layout/plantilla :: footer"></section>
     </body>
 </html>
