--- a/EMTECH/src/main/resources/templates/servicios.html
+++ b/EMTECH/src/main/resources/templates/servicios.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
     <head>
-        <title>Candidatos</title>
+        <title>Servicios</title>
         <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
@@ -17,7 +17,7 @@
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"></header> 
-        <article th:replace="layout/PlantillaCandidatos :: formularioCandidatos"></article>
+        <article th:replace="layout/PlantillaServicios :: formularioServicios"></article>
         <section th:replace="layout/plantilla :: footer"></section>
     </body>
 </html>
