--- a/EMTECH/src/main/resources/templates/layout/PlantillaCandidatos.html
+++ b/EMTECH/src/main/resources/templates/layout/PlantillaCandidatos.html
@@ -48,7 +48,7 @@
 
                     </div>
                 </div>
-                <input type="submit" value="Agregar nuevo candidaato">
+                <input type="submit" value="Agregar nuevo candidato">
                 <div  style="font-size: 18px;color: blueviolet; font-weight: bold;"
                 th:if="${param.exito}">Candidato agregado correctamente! 
                 </div>
