--- a/EMTECH/src/main/resources/static/css/styles.css
+++ b/EMTECH/src/main/resources/static/css/styles.css
@@ -39,7 +39,7 @@ header{
 .a_navbar{
     text-decoration: none;
     color: #ffcc00;
-    font-size: 25px; 
+    font-size: 25px;
     margin-right: 10px
 }
 
@@ -57,7 +57,7 @@ header{
     header{
         flex-direction: column;
     }
-    
+
     nav{
         padding: 10px 0px;
     }
@@ -78,7 +78,7 @@ header{
 
 .navbar a {
     text-decoration: none;
-     display: inline-block;
+    display: inline-block;
     /* Otros estilos */
 }/*************/
 footer{
@@ -88,6 +88,42 @@ footer{
     color: white;
     padding: 10px
 }
+.welcome {
+    font-family: 'Arial';
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 30vh;
+    text-align: center;
+}
+
+/* Estilos para el título principal */
+.welcome h1 {
+    font-size: 3em;
+    margin-bottom: 10px;
+    color: #007bff; /* Color azul */
+}
+
+/* Estilos para el párrafo de descripción */
+.welcome p {
+    font-size: 1.2em;
+    line-height: 1.6;
+    max-width: 70%;
+    margin-bottom: 30px;
+}
+
+.content {
+    text-align: center;
+    max-width: 80%; /* Ancho máximo del contenido */
+    margin-bottom: 20px; /* Espaciado inferior entre el texto y el video */
+}
+
+.video-container {
+    text-align: center; /* Centrar horizontalmente el contenido del contenedor */
+}
+
+
 
 /*.text_img{
     display: flex;
