--- a/EMTECH/src/main/resources/templates/index.html
+++ b/EMTECH/src/main/resources/templates/index.html
@@ -7,6 +7,14 @@
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"></header> 
+        <section class="welcome">
+        <h1>Bienvenido a Emtech!</h1>
+                <p>Nosotros te ofrecemos una vinculación laboral y/o trabajadores 
+                para el crecimiento de tu empresa.</p>
+        </section>
+         <div class="video-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/PN7YpA-KL9U" frameborder="0" allowfullscreen></iframe>
+    </div>
         
         <section th:replace="layout/plantilla :: footer"></section>
     </body>
